[package]
name = "ettac"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = { version = "0.1.14", features = ["help"], default-features = false }
mlua = { version = "0.11.6", features = ["lua55", "vendored"]}
ssh2 = "0.9"

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"

[[bin]]
name = "ettac"
path = "src/main.rs"
test = false
bench = false

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
