[package]
name = "ettac"
version = "0.1.0"
edition = "2024"

[features]
integration = []

[dependencies]
argh = { version = "0.1.14", features = ["help"], default-features = false }
mlua = { version = "0.11.6", features = ["lua55", "vendored"]}
libssh-rs = { version = "0.3.6", features = ["vendored"] }
shlex = "1.3.0"
base64 = "0.22.1"
partially = {  version = "0.2.1", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"

[[bin]]
name = "ettac"
path = "src/main.rs"
test = false
bench = false

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
